feat(module): Finalize POS payment flow, Kiosk Sync, Payroll PDF Export, live Ticketing linkage, and deploy Cloud Database schema

--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "@supabase/supabase-js": "^2.98.0",
     "clsx": "^2.1.1",
     "framer-motion": "^12.34.3",
+    "jspdf": "^4.2.0",
+    "jspdf-autotable": "^5.0.7",
     "lucide-react": "^0.575.0",
+    "pg": "^8.19.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "tailwind-merge": "^3.5.0"
