--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@capacitor/preferences": "^8.0.1",
     "@supabase/supabase-js": "^2.98.0",
     "clsx": "^2.1.1",
+    "dexie": "^4.3.0",
+    "dexie-react-hooks": "^4.2.0",
     "framer-motion": "^12.34.3",
     "jspdf": "^4.2.0",
     "jspdf-autotable": "^5.0.7",
