--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "tailwind-merge": "^3.5.0"
   },
   "devDependencies": {
+    "@capacitor/assets": "^3.0.5",
     "@eslint/js": "^9.39.1",
     "@supabase/supabase-js": "^2.98.0",
     "@types/node": "^24.10.1",
