--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,4 +1,7 @@
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-kapt'
+apply plugin: 'kotlinx-serialization'
 
 android {
     namespace = "com.techshack.tcems"
@@ -10,10 +13,11 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-        aaptOptions {
-             // Files and dirs to omit from the packaged assets dir, modified to accommodate modern web apps.
-             // Default: https://android.googlesource.com/platform/frameworks/base/+/282e181b58cf72b6ca770dc7ca5f91f135444502/tools/aapt/AaptAssets.cpp#61
-            ignoreAssetsPattern = '!.svn:!.git:!.ds_store:!*.scc:.*:!CVS:!thumbs.db:!picasa.ini:!*~'
+        
+        javaCompileOptions {
+            annotationProcessorOptions {
+                arguments += ["room.schemaLocation": "$projectDir/schemas".toString()]
+            }
         }
     }
     buildTypes {
@@ -22,11 +26,21 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+    kotlinOptions {
+        jvmTarget = '1.8'
+    }
+    buildFeatures {
+        viewBinding true
+    }
 }
 
 repositories {
     flatDir{
-        dirs '../capacitor-cordova-android-plugins/src/main/libs', 'libs'
+        dirs 'libs'
     }
 }
 
@@ -35,14 +49,52 @@ dependencies {
     implementation "androidx.appcompat:appcompat:$androidxAppCompatVersion"
     implementation "androidx.coordinatorlayout:coordinatorlayout:$androidxCoordinatorLayoutVersion"
     implementation "androidx.core:core-splashscreen:$coreSplashScreenVersion"
-    implementation project(':capacitor-android')
+    implementation "com.google.android.material:material:1.12.0"
+    implementation "androidx.navigation:navigation-fragment-ktx:$navigationVersion"
+    implementation "androidx.navigation:navigation-ui-ktx:$navigationVersion"
+    
+    // DataStore & Lifecycle
+    implementation "androidx.datastore:datastore-preferences:$datastoreVersion"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycleVersion"
+
+    // Biometric
+    implementation "androidx.biometric:biometric:1.2.0-alpha05"
+
     testImplementation "junit:junit:$junitVersion"
     androidTestImplementation "androidx.test.ext:junit:$androidxJunitVersion"
     androidTestImplementation "androidx.test.espresso:espresso-core:$androidxEspressoCoreVersion"
-    implementation project(':capacitor-cordova-android-plugins')
-}
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:2.1.10"
+    
+    // CameraX
+    def cameraXVersion = rootProject.ext.cameraXVersion
+    implementation "androidx.camera:camera-core:${cameraXVersion}"
+    implementation "androidx.camera:camera-camera2:${cameraXVersion}"
+    implementation "androidx.camera:camera-lifecycle:${cameraXVersion}"
+    implementation "androidx.camera:camera-view:${cameraXVersion}"
+    
+    // Supabase
+    implementation "io.github.jan-tennert.supabase:postgrest-kt:3.1.1"
+    implementation "io.github.jan-tennert.supabase:auth-kt:3.1.1"
+    implementation "io.github.jan-tennert.supabase:storage-kt:3.1.1"
+    implementation "io.github.jan-tennert.supabase:functions-kt:3.1.1"
+    implementation "io.github.jan-tennert.supabase:realtime-kt:3.1.1"
 
-apply from: 'capacitor.build.gradle'
+    // Ktor
+    implementation "io.ktor:ktor-client-android:3.0.3"
+    implementation "io.ktor:ktor-client-core:3.0.3"
+    implementation "io.ktor:ktor-client-cio:3.0.3"
+    implementation "io.ktor:ktor-client-content-negotiation:3.0.3"
+    implementation "io.ktor:ktor-serialization-kotlinx-json:3.0.3"
+    
+    // Room
+    def roomVersion = "2.6.1"
+    implementation "androidx.room:room-runtime:$roomVersion"
+    implementation "androidx.room:room-ktx:$roomVersion"
+    kapt "androidx.room:room-compiler:$roomVersion"
+    
+    // Kotlin Serialization
+    implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.7.3"
+}
 
 try {
     def servicesJSON = file('google-services.json')
