--- a/android/variables.gradle
+++ b/android/variables.gradle
@@ -9,8 +9,17 @@ ext {
     androidxFragmentVersion = '1.8.9'
     coreSplashScreenVersion = '1.2.0'
     androidxWebkitVersion = '1.14.0'
+    lifecycleVersion = '2.8.4'
+    navigationVersion = '2.8.5'
+    datastoreVersion = '1.1.2'
+    cameraXVersion = '1.4.1'
     junitVersion = '4.13.2'
     androidxJunitVersion = '1.3.0'
     androidxEspressoCoreVersion = '3.7.0'
     cordovaAndroidVersion = '14.0.1'
+    
+    // New dependencies
+    supabaseVersion = '3.1.1'
+    ktorVersion = '3.0.3'
+    roomVersion = '2.6.1'
 }
